--- a/index.html
+++ b/index.html
@@ -37,47 +37,84 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-12" style="background-color: white; margin-top: 3rem;">
-        <table class="table">
+      <div class="col-12 table-box" style="background-color: white; margin-top: 3rem;" id="table1">
+        <table class="table table-striped table-hover">
           <thead>
             <th>S/N</th>
-            <th>Distribution</th>
+            <th>Colour Distribution</th>
           </thead>
-          <tbody>
-            <tr>
-              <td>Hello</td>
-              <td>Again</td>
-            </tr>
-            <tr>
-              <td>Hello</td>
-              <td>Again</td>
-            </tr>
+          <tbody id="tbody">
+            
           </tbody>
         </table>
       </div>
 
-      <div class="col-12 hide" style="background-color: white; margin-top: 3rem;">
+      <div class="col-12 table-box hide" style="background-color: white; margin-top: 3rem;" id="table2">
         <table class="table">
           <thead>
             <th>S/N</th>
             <th>Number</th>
             <th>Color</th>
           </thead>
-          <tbody>
-            <tr>
-              <td>Hello</td>
-              <td>Again</td>
-              <td>Purple</td>
-            </tr>
-            <tr>
-              <td>Hello</td>
-              <td>Again</td>
-              <td>yellow</td>
-            </tr>
+          <tbody id="tbody-2">
+
           </tbody>
         </table>
       </div>
+
+      <div class="col-12 move hide" id="table3" style="background-color: white; margin-top: 3rem; padding: 6rem">
+        <div class="container">
+          <div class="row">
+            <div class="col-12" style="margin-bottom: 1.5rem">
+              <h2 class="text-center text-dark">RECURRENCE ANALYSIS</h2>
+              <hr>
+            </div>
+            
+            <div class="col-12">
+              <div class="row">
+                <div class="col-6"><h4><span class="text-danger">RED</span>:</h4></div>
+                <div class="col-6"><h5><span class="text-danger"><span id="numOfRed">...</span> / <span name="total">...</span></span> &nbsp;&nbsp;&nbsp;=>&nbsp;&nbsp;&nbsp; <span class="text-danger" id="numOfRedPercent">...</span></h5></div>
+              </div>
+              <div class="row">
+                <div class="col-6"><h4><span class="text-danger">RED</span> & <span class="text-violet">VIOLET</span>:</h4></div>
+                <div class="col-6"><h5><span class="text-danger"><span id="numOfRedAndViolet">...</span> / <span name="total">...</span></span> &nbsp;&nbsp;&nbsp;=>&nbsp;&nbsp;&nbsp; <span class="text-danger" id="numOfRedAndVioletPercent">...</span></h5></div>
+              </div>
+              <div class="row">
+                <div class="col-6"><h4><span class="text-danger">RED</span> (NO <span class="text-violet">VIOLET</span>):</h4></div>
+                <div class="col-6"><h5><span class="text-danger"><span id="numOfOnlyRed">...</span> / <span name="total">...</span></span> &nbsp;&nbsp;&nbsp;=>&nbsp;&nbsp;&nbsp; <span class="text-danger" id="numOfOnlyRedPercent">...</span></h5></div>
+              </div>
+              <hr>
+              <div class="row">
+                <div class="col-6"><h4><span class="text-success">GREEN</span>:</h4></div>
+                <div class="col-6"><h5><span class="text-success"><span id="numOfGreen">...</span> / <span name="total">...</span></span> &nbsp;&nbsp;&nbsp;=>&nbsp;&nbsp;&nbsp; <span class="text-success" id="numOfGreenPercent">...</span></h5></div>
+              </div>
+              <div class="row">
+                <div class="col-6"><h4><span class="text-success">GREEN</span> & <span class="text-violet">VIOLET</span>:</h4></div>
+                <div class="col-6"><h5><span class="text-success"><span id="numOfGreenAndViolet">...</span> / <span name="total">...</span></span> &nbsp;&nbsp;&nbsp;=>&nbsp;&nbsp;&nbsp; <span class="text-success" id="numOfGreenAndVioletPercent">...</span></h5></div>
+              </div>
+              <div class="row">
+                <div class="col-6"><h4><span class="text-success">GREEN</span> (NO <span class="text-violet">VIOLET</span>):</h4></div>
+                <div class="col-6"><h5><span class="text-success"><span id="numOfOnlyGreen">...</span> / <span name="total">...</span></span> &nbsp;&nbsp;&nbsp;=>&nbsp;&nbsp;&nbsp; <span class="text-success" id="numOfOnlyGreenPercent">...</span></h5></div>
+              </div>
+              <hr>
+              <div class="row">
+                <div class="col-6"><h4><span class="text-violet">VIOLET:</h4></div>
+                <div class="col-6">
+                  <h5><span class="text-violet"><span id="numOfViolet">...</span> / <span name="total">...</span></span> &nbsp;&nbsp;&nbsp;=>&nbsp;&nbsp;&nbsp; <span class="text-success" id="numOfVioletPercent">...</span></h5>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
+
+  <div class="fa-mine">
+    <abbr id="next" title="Next Table"><span class="fa fa-long-arrow-right hvr-grow right"></span></abbr>
+    <abbr id="previous" class="hide" title="Previous Table"><span class="fa fa-long-arrow-left hvr-grow left"></span></abbr>
+    <abbr id="next2" class="hide" title="Next Table"><span class="fa fa-long-arrow-right hvr-grow right"></span></abbr>
+    <abbr id="previous2" class="hide" title="Previous Table"><span class="fa fa-long-arrow-left hvr-grow left"></span></abbr>
   </div>
   <!--Scripts-->
   <script src="./lib/jquery/jquery.min.js"></script>
